Phase 1: Security hardening, init gate, config validation, test coverage
- Fix SQL injection: block semicolons, SQL comments, 17 dangerous keywords
- Fix path traversal: trailing separator check prevents prefix matching attacks
- Add initialization gate: reject tools/list and tools/call before initialize
- Add startup config validation: warn about missing paths, empty connections, malformed hosts
- Expand tests: 8 to 63 tests covering all tools and McpServerHandler
- Add multi-client setup guide: VS Code (Copilot/Continue/Cline), Cursor, Windsurf, ChatGPT, Claude Code
- Mark Phase 1 complete in roadmap

--- a/src/McpServer/McpServer.csproj
+++ b/src/McpServer/McpServer.csproj
@@ -21,6 +21,11 @@
     <PackageReference Include="System.Text.Json" Version="8.0.5" />
   </ItemGroup>
 
+  <!-- Argha - 2026-02-17 - expose internals to test project for unit testing -->
+  <ItemGroup>
+    <InternalsVisibleTo Include="McpServer.Tests" />
+  </ItemGroup>
+
   <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
